--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "@/styles/globals.css";
 import Navbar from "@/components/Navbar.astro";
 import Footer from "@/components/Footer.astro";
+import Chatbot from "@/components/Chatbot";
 import favicon from "@/assets/logos/logo_v2_transparent.png";
 import faviconLight from "@/assets/logos/logo_v2_transparent_light.png";
 
@@ -10,10 +11,10 @@ import { ClientRouter } from "astro:transitions";
 interface Props {
   title: string;
 }
-const darkMode =
-  typeof window !== "undefined"
-    ? window.localStorage.getItem("darkMode") === "true"
-    : false;
+let darkMode = false;
+if (typeof window !== "undefined") {
+  darkMode = window.localStorage.getItem("darkMode") === "true";
+}
 
 const { title } = Astro.props;
 ---
@@ -25,9 +26,12 @@ const { title } = Astro.props;
     <meta
       name="description"
       content="Official UTSBI website: Research Driven, Professionally Inspired, and Student Powered."
-      />
+    />
     <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="kNRqyPtzqZImsFG7njBLFwU5EMA0hIf8vCLOwJYUhLI" />
+    <meta
+      name="google-site-verification"
+      content="kNRqyPtzqZImsFG7njBLFwU5EMA0hIf8vCLOwJYUhLI"
+    />
     <!-- SEO -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://utsbi.org" />
@@ -51,13 +55,16 @@ const { title } = Astro.props;
     <link
       rel="icon"
       type="image/png"
-      href={darkMode ? faviconLight.src : favicon.src}
+      href={darkMode ? favicon.src : faviconLight.src}
     />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <ClientRouter />
   </head>
   <body class="scrollbar">
+    <div class="fixed bottom-8 right-8 z-50">
+      <Chatbot client:only />
+    </div>
     <Navbar />
     <slot />
     <Footer />
