--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,9 +62,9 @@ const { title } = Astro.props;
     <ClientRouter />
   </head>
   <body class="scrollbar">
-    <div class="fixed bottom-8 right-8 z-50">
+    <!-- <div class="fixed bottom-8 right-8 z-50">
       <Chatbot client:only />
-    </div>
+    </div> -->
     <Navbar />
     <slot />
     <Footer />
