--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const currentYear = new Date().getFullYear();
       </div>
       <div class="pl-3 flex space-x-4">
         <a
-          href="https://instagram.com/sbi_ut"
+          href="https://instagram.com/ut.sbi"
           aria-label="Instagram"
           class="text-gray-800 hover:underline"
         >
