--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,6 +20,7 @@ const currentYear = new Date().getFullYear();
           href="https://instagram.com/ut.sbi"
           aria-label="Instagram"
           class="text-gray-800 hover:underline"
+          target="_blank"
         >
           Instagram
         </a>
@@ -27,6 +28,7 @@ const currentYear = new Date().getFullYear();
           href="https://www.linkedin.com/company/utsbi/"
           aria-label="LinkedIn"
           class="text-gray-800 hover:underline"
+          target="_blank"
         >
           LinkedIn
         </a>
