--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ const people = [
   { name: "Sam Moran", role: "Vice President", email: "sammoran@utexas.edu" },
   {
     name: "Brendan Lyon",
-    role: "Operations Director",
+    role: "Engineering Director",
     email: "brendanlyon@utexas.edu",
   },
   { name: "Enoch Zhu", role: "Tech Director", email: "enochzhu@utexas.edu" },
@@ -35,7 +35,7 @@ const people = [
   { name: "Ali Akbar", role: "Finance Director", email: "aliakbar@utexas.edu" },
   {
     name: "Kabir Muzamdar",
-    role: "Civil Engineering Director",
+    role: "Engineering Director",
     email: "kabmuzum@utexas.edu",
   },
   {
