--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import background from "@/assets/images/background.png";
 import group from "@/assets/images/group.jpg";
 
-const google_forms = "https://forms.gle/KWJjaXGYt2dv3bY68";
+const FORMS_LINK = "https://forms.gle/KWJjaXGYt2dv3bY68";
 ---
 
 <Layout title="Home">
@@ -27,7 +27,7 @@ const google_forms = "https://forms.gle/KWJjaXGYt2dv3bY68";
           Research Driven, Professionally Inspired, and Student Powered
         </div>
         <div class="pl-1 pt-6 flex flex-col sm:flex-row sm:space-x-4">
-          <a href={google_forms} class="mb-3 sm:mb-0">
+          <a href={FORMS_LINK} class="mb-3 sm:mb-0">
             <button
               class="bg-green-500 hover:bg-transparent text-white-700 hover:text-white transition duration-300 pt-3 pb-2 px-6 border border-green-500 hover:border-green-500 rounded"
             >
@@ -102,7 +102,7 @@ const google_forms = "https://forms.gle/KWJjaXGYt2dv3bY68";
     >
       <div class="flex-1 mb-3 sm:mb-0">
         <div class="text-xl">
-          80<span class="text-sm">+</span> Students Impacteds
+          100<span class="text-sm">+</span> Students Impacted
         </div>
         <div>
           Empowering students with hands-on experience in sustainable
@@ -111,13 +111,13 @@ const google_forms = "https://forms.gle/KWJjaXGYt2dv3bY68";
       </div>
       <div class="flex-1 mb-3 sm:mb-0">
         <div class="text-xl">
-          300<span class="text-sm">+</span> Hours Volunteered
+          500<span class="text-sm">+</span> Hours Volunteered
         </div>
-        <div>We formulate design plans that meets given parameters.</div>
+        <div>We formulate design plans that meet given parameters.</div>
       </div>
       <div class="flex-1 mb-3 sm:mb-0">
         <div class="text-xl">
-          20<span class="text-sm">+</span> Student Members
+          30<span class="text-sm">+</span> Student Members
         </div>
         <div>
           We bring together students from all majors to tackle challenges and
@@ -140,7 +140,7 @@ const google_forms = "https://forms.gle/KWJjaXGYt2dv3bY68";
           >
         </div>
         <div class="pt-8">
-          <a href={google_forms}>
+          <a href={FORMS_LINK}>
             <button
               class="bg-green-500 hover:bg-transparent text-white-700 hover:text-white transition duration-300 text-base sm:text-xl pt-4 pb-3 px-6 border border-green-500 hover:border-green-500 rounded"
             >
