change kabir last name

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -34,7 +34,7 @@ const people = [
   },
   { name: "Ali Akbar", role: "Finance Director", email: "aliakbar@utexas.edu" },
   {
-    name: "Kabir Muzamdar",
+    name: "Kabir Muzumdar",
     role: "Engineering Director",
     email: "kabmuzum@utexas.edu",
   },
