chore: update logo gif to fix inconsistencies

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
 import logo from "@/assets/logos/logo_v2.png";
-import logoGif from "@/assets/logos/sbi_logo.gif";
+import logoGif from "@/assets/logos/official_logo.gif";
 import logoAnimation from "@/assets/logos/logo_animation.mp4";
 import Image from "astro/components/Image.astro";
 
