chore: change director's emails to utsbi emails

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -63,11 +63,11 @@ import Layout from "../layouts/Layout.astro";
         <div>
           Contact our presidents:
           <a
-            href="mailto:px.guzman@utexas.edu"
+            href="mailto:pedro@utsbi.org"
             class="text-green-500 hover:underline font-semibold">Pedro Guzman</a
           > or
           <a
-            href="mailto:sammoran@utexas.edu"
+            href="mailto:sam@utsbi.org"
             class="text-green-500 hover:underline font-semibold">Sam Moran</a
           >
         </div>
