--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,29 +14,29 @@ const images = [
 ];
 
 const people = [
-  { name: "Pedro Guzman", role: "President", email: "px.guzman@utexas.edu" },
-  { name: "Sam Moran", role: "Vice President", email: "sammoran@utexas.edu" },
+  { name: "Pedro Guzman", role: "President", email: "pedro@utsbi.org" },
+  { name: "Sam Moran", role: "Vice President", email: "sam@utsbi.org" },
   {
     name: "Brendan Lyon",
     role: "Engineering Director",
     email: "brendanlyon@utexas.edu",
   },
-  { name: "Enoch Zhu", role: "Tech Director", email: "enochzhu@utexas.edu" },
+  { name: "Enoch Zhu", role: "Tech Director", email: "enoch@utsbi.org" },
   {
     name: "Daniel Lam",
     role: "Tech Co-Director",
-    email: "daniel.w.lam@utexas.edu",
+    email: "daniel@utsbi.org",
   },
   {
     name: "Dev Shroff",
     role: "R&D Director",
-    email: "dev.shroff@utexas.edu",
+    email: "dev@utsbi.org",
   },
   { name: "Ali Akbar", role: "Finance Director", email: "aliakbar@utexas.edu" },
   {
     name: "Kabir Muzumdar",
     role: "Engineering Director",
-    email: "kabmuzum@utexas.edu",
+    email: "kabir@utsbi.org",
   },
   {
     name: "Noah Dao",
